force-app/main/default/objects/Google_Drive_Mapping_Folder__c/Google_Drive_Mapping_Folder__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains the link between an object in SalesForce and the corresponding folder in Google Drive</description>
    <label>Google Drive Mapping Folder</label>
</CustomObject>