force-app/main/default/objects/Google_Drive_Mapping_Folder__c/fields/Folder_Drive_Id_Without_Parent__c.field-meta.xml
<CustomField>
    <fullName>Folder_Drive_Id_Without_Parent__c</fullName>
    <label>Folder Drive Id Without Parent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>