force-app/main/default/objects/Google_Drive_Mapping_Folder__c/fields/Google_Drive_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder_ID__c</fullName>
    <externalId>true</externalId>
    <label>Google Drive Folder ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>