force-app/main/default/objects/Google_Drive_Mapping_Folder__c/fields/Opportunity_Drive_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Drive_Folder_Id__c</fullName>
    <label>Opportunity Drive Folder Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>