force-app/main/default/objects/Google_Drive_Mapping_Folder__c/fields/Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field__c</fullName>
    <label>Parent_Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>