force-app/main/default/objects/Google_Drive_Mapping_Folder__c/fields/Salesforce_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object_ID__c</fullName>
    <label>Salesforce Object ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>