force-app/main/default/objects/Google_Drive_Mapping_Folder__c/fields/Sub_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Folder_Name__c</fullName>
    <label>Sub_Folder_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>